Added a alert to scroll on first page. Thanks Hoenir Ribeiro to see this mistake :)

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,11 @@
 			<a title="{{ _t.banner.seeCV }}" target="_blank" href="{{ _t.general.cvLink }}"><i class="fa fa-user"></i></a>
 		</div>
 
+		<div class="scroll-alert">
+			Scroll<br>
+			<i class="fa fa-angle-down"></i>
+		</div>
+
 	</div>
 
 </div>
